# burningalice

./: README.md  pyproject.toml  setup.cfg
burningalice/: auto_label_tracker.py  map_analyzer.py  metrics_tracker.py  text_config_generator.py  text_tracker.py
