[metadata]
name = burningalice
version = 0.0.19
author = Tempest Storm
description = Computer Vision library for automating text extraction and data labeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/supremepokebotking/burningalice
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
